adding facebook link

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
       <div class="box-custom-1-aside">
         <ul class="box-custom-1-list">
           <li class="wow fadeInLeft" data-wow-delay=".5s">
-            <a class="link link-social" href="#">
+            <a class="link link-social" href="https://www.facebook.com/ARococoInteriorDesign?locale=he_IL">
               <div class="icon novi-icon fa-facebook"></div>
             </a>
           </li>
