--- a/templates/index.html
+++ b/templates/index.html
@@ -257,7 +257,7 @@
     <section class="section section-lg bg-white" id="contacts" dir="rtl">
       <div class="container">
         <h2 class="text-dark wow fadeInUp" data-wow-delay=".5s">צור קשר</h2>
-        <form class="contact-form wow fadeInUp" data-wow-delay=".6s" method="post" action="/send_mail">
+        <form class="contact-form wow fadeInUp" data-wow-delay=".6s" method="post" action="/send_email">
           <div class="form-group">
             <label for="name">שם מלא<span className="text-rose-500">*</span></label>
             <input type="text" class="form-control" id="name" name="name" placeholder="שם מלא" required>
